Alterar preço para R$ 19 e otimizar para Netlify

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Método de Criação de Tilápias em Tanques - Ganhe Renda Extra Criando Peixes</title>
-    <meta name="description" content="Descubra o método comprovado para criar tilápias em tanques e ganhar renda extra sem sair de casa. Guia completo passo a passo por apenas R$ 37.">
+    <title>Método de Criação de Tilápias em Tanques - Aprenda a Criar Peixes</title>
+    <meta name="description" content="Descubra o método comprovado para criar tilápias em tanques e ter uma renda extra sem sair de casa. Guia completo passo a passo por apenas R$ 19.">
     
     <!-- Google Fonts - Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
